# gguf

./: .gitignore  CONVERSATION_ANALYSIS_GUIDE.md  CONVERSION_GUIDE.md  GENERALIZED_CONVERSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ANALYSIS.md  INFERENCE_IMPLEMENTATION_SUMMARY.md  LANGUAGE_COMPARISON.md  QUICKSTART.md  README.md  SCALING_ANALYSIS.md  VOCABULARY_ANALYSIS_GUIDE.md  pyproject.toml
examples/: ALL_POSSIBLE_INSIGHTS.md  ANALYSIS_README.md  Bolt Echo Persona Recursive.md  ECHO_ANALYSIS_GUIDE.md  ESN-test.json  It appears we have encountered the Gtoun.md  Model Configuration for OpenCog AtomSpace.md  NECHURO_SYNTHESIS.md  analyze_all_echo_data.py  analyze_conversations.py  analyze_deep_tree_echo.py  analyze_vocabulary_layers.py  biases (1).json  complete_demo.py  convert_gguf.py  deep_tree_echo_dan_conversation.jsonl  demonstrate_inference.py  export_to_json.py  generate_additional_representations.py  generate_representations.py  inspect_file.py  lv1-gpt2.txt  lv1-koboldai-opt-350m-erebus.txt  lv2-gpt2.txt  lv2-koboldai-opt-350m-erebus.txt  lv3-gpt2.txt  lv3-koboldai-opt-350m-erebus.txt  lv4-gpt2.txt  lv4-koboldai-opt-350m-erebus.txt  lv5-koboldai-opt-350m-erebus.txt  modify_metadata.py  visualize_echo_insights.py
gguf_workbench/: __init__.py  analysis.py  cli.py  constants.py  converter.py  metadata.py  reader.py  vocabulary_analysis.py  writer.py
tests/: test_analysis.py  test_converter.py  test_echo_analysis.py  test_gguf_workbench.py  test_inference.py  test_new_representations.py  test_representations.py  (+1 more)
tinytf/: README.md  (+11 more)
(+51 files in other folders)
